# metamorproxies

./: README.md  proxy.py  proxy.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-tests.yml
metamorproxies/: __init__.py
metamorproxies/soldier/: __init__.py  print.py
tests/: test_commands_print.py  test_print_web.py  test_print_web_mult.py  test_print_web_mult_trhead.py  test_printweb_basic.py
